--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -47,9 +47,7 @@
 .js-btt-btn {
     position: fixed;
     bottom: 1em;
-    
-    right: 8em;
-    
+    right: 1em;
     width: 2.7em;
     height: 2.7em;
     border-radius: 50%;
